first iteration of website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <html>
     <head>
         <title>test</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="./web/css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Exo+2:200|Exo:900|Heebo:900|Montserrat:300,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     </head>
     <body>
-        <p>
-            Sonda Yip
-        </p>
+        <section class="home">
+            <div class="home__container">
+                <img class="home__portrait" src="./web/img/portrait.png" alt="">
+                <h1 class="home__title">Sonda Yip</h1>
+                <h2 class="home__subtitle">Front End Developer</h2>
+                <div class="home__socials">
+                    <a class="home__link" href="./">
+                        <i class="far fa-file-alt"></i>
+                    </a>
+                    <a class="home__link" href="">
+                        <i class="far fa-envelope"></i>
+                    </a>
+                    <a class="home__link" href="">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a class="home__link" href="">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a class="home__link" href="">
+                        <i class="fab fa-codepen"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
