--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>test</title>
+        <title>Sonda Yip | Front End Developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/favicon.ico?v=3" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico?v=3" type="image/x-icon">
         <link rel="stylesheet" href="./web/css/main.css">
         <link href="https://fonts.googleapis.com/css?family=Exo+2:200|Exo:900|Heebo:900|Montserrat:300,700,900" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
