--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html>
     <head>
         <title>Sonda Yip | Front End Developer</title>
+
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Sonda Yip, passionate and driven developer, always looking for new challenges in the web development scene. Keen interest in new technologies and seeking for job opportunities.">
+        <meta name="keywords" content="Sonda Yip, web developer, web integrator, html, html5, css, css3, javascript, JS, jquery, developer, front-end, front end developer">
+        <meta property="og:title" content="Sonda Yip | Front End Developer">
+        <meta property="og:description" content="Sonda Yip, passionate and driven developer, always looking for new challenges in the web development scene. Keen interest in new technologies and seeking for job opportunities.">
+        <meta property="og:url" content="http://sondayip.com/">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="shortcut icon" href="/favicon.ico?v=3" type="image/x-icon">
         <link rel="icon" href="/favicon.ico?v=3" type="image/x-icon">
         <link rel="stylesheet" href="./web/css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Exo+2:200|Exo:900|Heebo:900|Montserrat:300,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:900|Montserrat:300,700,900">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+        
+        <script>
+            window.onload = function() {
+                document.querySelector(".home").classList.add("loaded");
+            }
+        </script>
     </head>
     <body>
         <section class="home">
@@ -19,16 +34,16 @@
                     <a class="home__link" href="./">
                         <i class="far fa-file-alt"></i>
                     </a>
-                    <a class="home__link" href="">
+                    <a class="home__link" href="mailto:sonda.yip@gmail.com">
                         <i class="far fa-envelope"></i>
                     </a>
-                    <a class="home__link" href="">
+                    <a class="home__link" target="_blank" href="https://www.linkedin.com/in/sonda-yip/">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a class="home__link" href="">
+                    <a class="home__link" target="_blank" href="https://github.com/yipsun">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a class="home__link" href="">
+                    <a class="home__link" target="_blank" href="https://codepen.io/yipsun/">
                         <i class="fab fa-codepen"></i>
                     </a>
                 </div>
