--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
         <script>
             window.onload = function() {
-                document.querySelector(".home").classList.add("loaded");
+                document.querySelector("body").classList.add("-loaded");
             }
         </script>
     </head>
