using parcel to build

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,9 +12,9 @@
         <meta property="og:url" content="http://sondayip.com/">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="/favicon.ico?v=3" type="image/x-icon">
-        <link rel="icon" href="/favicon.ico?v=3" type="image/x-icon">
-        <link rel="stylesheet" href="./web/css/main.css">
+        <link rel="shortcut icon" href="./favicon.ico?v=3" type="image/x-icon">
+        <link rel="icon" href="./favicon.ico?v=3" type="image/x-icon">
+        <link rel="stylesheet" href="../styles/main.scss">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:900|Montserrat:300,700,900">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
         
@@ -24,14 +24,14 @@
             }
         </script>
     </head>
-    <body>
+    <body home>
         <section class="home">
             <div class="home__container">
-                <img class="home__portrait" src="./web/img/portrait.png" alt="">
+                <img class="home__portrait" src="../img/portrait.png" alt="">
                 <h1 class="home__title">Sonda Yip</h1>
                 <h2 class="home__subtitle">Front End Developer</h2>
                 <div class="home__socials">
-                    <a class="home__link" href="./web/doc/yip_sonda_resume_ENG.pdf" download>
+                    <a class="home__link" href="../doc/yip_sonda_resume_ENG.pdf" download>
                         <i class="far fa-file-alt"></i>
                     </a>
                     <a class="home__link" href="mailto:sonda.yip@gmail.com">
