--- a/src/pages/PRM1001/index.html
+++ b/src/pages/PRM1001/index.html
@@ -33,9 +33,9 @@
       <section class="hero">
         <div>
           <h1>
-            Développement web, monteur video
+            Développement web, réalisation video
             <br />
-            et soutiens informatique
+            et soutien informatique
           </h1>
           <span></span>
           <h3>Activité 4: colloque des métiers</h3>
@@ -162,17 +162,16 @@
       <section class="introDec">
         <h1>DEC: Techniques d'intégration multimédia</h1>
       </section>
-      <section class="metiers">
+      <section class="layout1 metiersDec">
         <div class="container">
           <div class="header"></div>
-
-          <h3>Enseignement en multimédia</h3>
+          <h3>Enseignement en Techniques d'intégration multimédia</h3>
           <p>Programme multimédia</p>
           <ul>
-            <li>devWeb</li>
-            <li>devJeux</li>
-            <li>Creation video</li>
-            <li>Modelisation animation 3d</li>
+            <li>Développement Web</li>
+            <li>Développement de jeux</li>
+            <li>Réalisation vidéo</li>
+            <li>Modélisation/animation 3D</li>
             <li>Design graphique</li>
           </ul>
 
@@ -182,26 +181,21 @@
             formation continue.
           </p>
 
-          <p>Autodidacte</p>
           <p>
-            Multidisciplinaire, avoir une connaissance de base sur les sujets,
-            afin de bien cadrer les étudiants.
+            Exploiter la pédagogie numérique afin ludifier le cours et rendre
+            son contenu plus motivant,stimulant et interactif.
           </p>
           <p>
-            Exploiter la pédagogie numérique, afin de ludifier et rendre le
-            contenu du cours plus motivant et stimulant.
+            Dans le domaine de l'informatique, les étudiants n’ont pas tous la
+            même expertise avec la technologie, malgré leurs intérêts. Cela
+            demande d’adapter son enseignement selon leur compétence/aise.
           </p>
           <p>
-            Dans le domaine informatique, les étudiants n’ont pas la même
-            expertise avec la technologie, malgré leurs intérêts, cela demande
-            d’adapter son enseignement selon leur compétence/aise.
+            Être capable de vulgariser des concepts techniques avec lesquels les
+            étudiants ne sont pas familiers.
           </p>
           <p>
-            Être capable de vulgariser des concepts techniques auxquel les
-            etudiants ne sont pas familier.
-          </p>
-          <p>
-            Le domaine multimédia étant majoritairement anglophone, il faut
+            Le domaine du multimédia étant majoritairement anglophone, il faut
             savoir bien choisir les termes en français afin de respecter les
             exigences des cégeps.
           </p>
@@ -215,45 +209,40 @@
         <span></span>
         <span></span>
       </div>
-      <section class="etudiant">
+      <section class="layout2 etudiantDec">
         <div class="container">
           <div class="figure"></div>
           <div class="content">
-            <h2>Profil etudiant</h2>
+            <h2>Profil étudiant</h2>
             <p>
-              L’informatique étant un domaine qui est en croissance, les gens
-              voient souvent ce domaine comme une option pour se réorienter,
-              ainsi les étudiants sont de tout âge( 18 - 45 ).
+              L’informatique étant un domaine en croissance, les gens voient
+              souvent ce domaine comme une option pour se réorienter. Ainsi les
+              étudiants sont de tout âge( 18 - 45 ).
             </p>
             <p>
-              Un domaine qui attire majoritairement les hommes, mais avec le
-              temps les femmes démontrent de plus en plus d’intérêt.
+              Un domaine qui attire majoritairement les hommes, mais, avec le
+              temps, les femmes démontrent de plus en plus d’intérêt.
             </p>
             <p>
-              Étudiant sous-estime la charge de travail qui est rattachée à
-              l’information ne voyant que le côté ludique
+              Les étudiants ont tendance à sous-estimer la charge de travail qui
+              est rattachée à l’information, ne voyant que le côté ludique
             </p>
             <p>
-              Le programme est offert sur 3 ans, mais beaucoup d’étudiant quitte
-              le programme ou étale leur cours sur 4 ans ou plus afin d'alléger
-              la charge de travail.
+              Le programme est offert sur 3 ans, mais beaucoup d’étudiants
+              quittent le programme ou étalent leurs cours sur 4 ans ou plus
+              afin d'alléger la charge de travail.
             </p>
             <p>
-              Les programmes en informatique ne demandent pas de cours prérequis
-              du secondaire.
+              Les programmes en multimédia ne demandent que des mathématiques du
+              secondaire 4 dans certains cégeps, par contre la majorité ne
+              demand qu'un DES.
             </p>
             <p>
-              Le programme en multimédia permet à l' étudiant d’explorer les
-              diverses facettes des médias numériques, certains choisissent de
-              se lancer dans leur carrière directement après l’obtention de leur
-              DEC, mais d'autres vont se spécialiser à l’université.
-            </p>
-            <p>
-              La technique d’intégration n’est offerte que dans 9 cégeps au
-              Québec à l’instant, cela amène une diversité géographique de la
-              part des étudiants, par exemple à Maisonneuve, nous retrouvons des
-              gens qui sont de la rive sud, rive nord et l’ouest de l’île de
-              Montréal.
+              La techniques d'intégration multimédia permet à l' étudiant
+              d’explorer les diverses facettes des médias numériques. Certains
+              choisissent de se lancer dans leur carrière directement après
+              l’obtention de leur DEC, mais d'autres vont se spécialiser à
+              l’université.
             </p>
           </div>
         </div>
@@ -263,7 +252,55 @@
         <span></span>
         <span></span>
       </div>
-      <section class="perspective"></section>
+      <section class="layout1 perspectiveMetierDec">
+        <div class="container">
+          <div class="header"></div>
+          <h3>Perspectives d'emploi</h3>
+          <p>
+            Le programme de Techniques d’intégration multimédia étant varié dans
+            ses spécialités, une grande diversité de profils sont recrutés pour
+            y enseigner; intégration web, design, programmation back-end, vidéo,
+            animation 3D, conception sonore, programmation de jeux,
+            illustration, etc.
+          </p>
+          <p>
+            Le Grand Montréal est la région du Québec où le domaine du
+            multimédia est le plus actif. Ainsi, la banque de professionnels
+            disponibles pour l’enseignement y est plus grande qu’ailleurs.
+          </p>
+
+          <p>
+            Les salaires en développement web étant compétitifs, il peut être
+            difficile de trouver des enseignants en techniques d'intégration
+            multimédia avec cette spécialisation particulière.
+          </p>
+          <p>
+            Une vague de retraites approche. Plusieurs postes seront sûrement à
+            combler au courant des prochaines années.
+          </p>
+          <p>
+            La quantité de Cégeps offrant un programme TIM dans la région du
+            Grand Montréal est limitée (4). Puisqu’il s’agit souvent de petits
+            programmes avec des cohortes d’une centaine d’élèves, les
+            possibilités d’emploi sont réduites.
+          </p>
+          <p>Autres programmes connexes:</p>
+          <p>Web:</p>
+          <ul>
+            <li>AEC en Design web</li>
+            <li>AEC en intégration multimédia</li>
+            <li>DEC en informatique</li>
+          </ul>
+          <p>Vidéo:</p>
+          <ul>
+            <li>
+              AEC en gestion de production cinématographique et télévisuelle
+            </li>
+            <li>AEC en montage vidéo</li>
+            <li>AEC en technologie des médias et plateau de tournage</li>
+          </ul>
+        </div>
+      </section>
       <section class="introDep">
         <h1>DEP: Soutien informatique</h1>
       </section>
@@ -272,7 +309,7 @@
         <span></span>
         <span></span>
       </div>
-      <section class="metierDep">
+      <section class="layout2 metierDep">
         <div class="container">
           <div class="figure">
             <img
@@ -306,6 +343,48 @@
               Le technicien en informatique doit être capable de magasiner du
               matériel informatique et faire un bon choix en terme de rapport
               qualité prix.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="layout1 etudiantDep">
+        <div class="container">
+          <div class="header"></div>
+          <h3>Profil étudiant</h3>
+
+          <p>
+            Dans la formation de DEP en soutien informatique le profil des
+            étudiants est très varié, on y retrouve plusieurs étudiants adultes
+            qui sont souvent en réorientation de carrière par exemple dans notre
+            centre ÉMICA durant la pandémie de Covid 19 nous avons reçu beaucoup
+            d'étudiant qui viennent du domaine de la restauration.
+          </p>
+          <p>
+            On retrouve peu d'étudiants internationaux et peu de jeunes qui
+            viennent du secondaire.
+          </p>
+          <p>
+            Il y a aussi peu de femmes 10% environ, mais nous avons d'excellents
+            résultats avec les femmes.
+          </p>
+        </div>
+      </section>
+      <section class="layout2 perspectiveMetierDep">
+        <div class="container">
+          <div class="figure"></div>
+          <div class="content">
+            <h2>Perspectives d'emploi</h2>
+            <p>
+              Le rythme d’embauche d’enseignants dans ce domaine est
+              grandissant, car la clientèle augmente et les écoles ont besoin de
+              plus en plus d'enseignants pour combler les besoins des clients,
+              en plus certaines écoles privées qui ne donnaient pas le programme
+              entrent dans la concurrence.
+            </p>
+            <p>
+              Les sites de recherche d'emploi le confirment avec beaucoup
+              d'annonces en plus depuis que j'ai mis à jour mon profil LinkedIn,
+              je reçois plusieurs offres d'emploi
             </p>
           </div>
         </div>
